manifests/externalsvc/unused/bbq-bookkeeper-demo2.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: bbq-bookkeeper-demo2-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: bbq-bookkeeper-demo2-svc
subsets:
  - addresses:
    - ip: 10.0.1.175
    ports:
    - port: 8080
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-bbq-bookkeeper-demo2
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
    - hosts:
        - bbq-bookkeeper-stage.pxbbq.com
      secretName: bbq-bookkeeper-demo2-tls
  rules:
    - host: bbq-bookkeeper-stage.pxbbq.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bbq-bookkeeper-demo2-svc
                port:
                  number: 8080
